exports[`test will update the state after the error action 1`] = `
Object {
  "mockResources": Object {
    "errors": Array [
      "This is an initial error",
      "This is another error",
    ],
    "isFetching": false,
    "lastCreatedAt": null,
    "lastDeletedAt": null,
    "lastListedAt": null,
    "lastRetrievedAt": null,
    "lastUpdatedAt": null,
    "resourceLists": Object {},
    "resourceListsBeingFetched": Array [],
    "resources": Object {},
    "resourcesBeingFetched": Array [],
    "selectedResource": null,
    "selectedResourceList": null,
  },
  "relatedMockResources": Object {
    "errors": Array [],
    "isFetching": false,
    "lastCreatedAt": null,
    "lastDeletedAt": null,
    "lastListedAt": null,
    "lastRetrievedAt": null,
    "lastUpdatedAt": null,
    "resourceLists": Object {},
    "resourceListsBeingFetched": Array [],
    "resources": Object {},
    "resourcesBeingFetched": Array [],
    "selectedResource": null,
    "selectedResourceList": null,
  },
}
`;

exports[`test will update the state after the initial action 1`] = `
Object {
  "mockResources": Object {
    "errors": Array [],
    "isFetching": true,
    "lastCreatedAt": null,
    "lastDeletedAt": null,
    "lastListedAt": null,
    "lastRetrievedAt": null,
    "lastUpdatedAt": null,
    "resourceLists": Object {},
    "resourceListsBeingFetched": Array [
      "key=30&key=0&key=\"someValue\"",
    ],
    "resources": Object {},
    "resourcesBeingFetched": Array [],
    "selectedResource": null,
    "selectedResourceList": null,
  },
  "relatedMockResources": Object {
    "errors": Array [],
    "isFetching": false,
    "lastCreatedAt": null,
    "lastDeletedAt": null,
    "lastListedAt": null,
    "lastRetrievedAt": null,
    "lastUpdatedAt": null,
    "resourceLists": Object {},
    "resourceListsBeingFetched": Array [],
    "resources": Object {},
    "resourcesBeingFetched": Array [],
    "selectedResource": null,
    "selectedResourceList": null,
  },
}
`;

exports[`test will update the state after the success action 1`] = `
Object {
  "mockResources": Object {
    "errors": Array [],
    "isFetching": false,
    "lastCreatedAt": null,
    "lastDeletedAt": null,
    "lastListedAt": "2016-01-01T05:00:00.000Z",
    "lastRetrievedAt": null,
    "lastUpdatedAt": null,
    "resourceLists": Object {
      "key=30&key=0&key=\"someValue\"": Object {
        "query": Object {
          "limit": 30,
          "offset": 0,
          "someQueryParam": "someValue",
        },
        "queryString": "key=30&key=0&key=\"someValue\"",
        "result": Array [
          "resourceId",
        ],
      },
    },
    "resourceListsBeingFetched": Array [],
    "resources": Object {
      "resourceId": Object {
        "id": "resourceId",
        "prop1": "initial prop1",
        "prop2": "initial prop2",
        "relatedResource": "relatedResourceId",
      },
    },
    "resourcesBeingFetched": Array [],
    "selectedResource": null,
    "selectedResourceList": "key=30&key=0&key=\"someValue\"",
  },
  "relatedMockResources": Object {
    "errors": Array [],
    "isFetching": false,
    "lastCreatedAt": null,
    "lastDeletedAt": null,
    "lastListedAt": null,
    "lastRetrievedAt": null,
    "lastUpdatedAt": null,
    "resourceLists": Object {},
    "resourceListsBeingFetched": Array [],
    "resources": Object {
      "relatedResourceId": Object {
        "id": "relatedResourceId",
        "relatedProp1": "initial relatedProp1",
      },
    },
    "resourcesBeingFetched": Array [],
    "selectedResource": null,
    "selectedResourceList": null,
  },
}
`;
